--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "^18.1.0",
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/router": "^18.1.0",
+    "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "^8.0.0",
     "primeng": "^17.18.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -30,6 +32,7 @@
     "@angular-devkit/build-angular": "^18.1.2",
     "@angular/cli": "^18.1.2",
     "@angular/compiler-cli": "^18.1.0",
+    "@angular/localize": "^18.1.3",
     "@types/jasmine": "~5.1.0",
     "angular-eslint": "18.3.0",
     "eslint": "^9.9.0",
@@ -45,6 +48,7 @@
     "stylelint-config-recommended": "^14.0.1",
     "stylelint-config-standard": "^36.0.1",
     "typescript": "~5.5.2",
-    "typescript-eslint": "8.1.0"
+    "typescript-eslint": "8.1.0",
+    "xliffmerge": "^1.0.0"
   }
 }
